Chore: batch_size: 300 옵션 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,8 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        jdbc:
+          batch_size: 300
         dialect: org.hibernate.dialect.MySQLDialect
 
   security:
